Fixed issue with double scrollbar in web layout

--- a/icd-web/icd-web-server/app/assets/stylesheets/icd.less
+++ b/icd-web/icd-web-server/app/assets/stylesheets/icd.less
@@ -3,7 +3,7 @@
 */
 
 html {
-  overflow: visible;
+  overflow: hidden;
 }
 
 body {
